--- a/pipelinefiles/imagestream.yaml
+++ b/pipelinefiles/imagestream.yaml
@@ -2,6 +2,6 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   labels:
-    build: cicd
+    build: cicd-build
   name: cicd
   namespace: cicd-project
